update cards, add buttons
update cards, add buttons

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,1 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&display=swap");
+
+@font-face {
+    font-family: 'FilsonProRegular';
+    src: url('../assets/fonts/filson-pro/FilsonProRegular.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'NeogroteskEssRegular';
+    src: url('../assets/fonts/neogrotesk-ess/neogrotesk-ess-regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
