--- a/src/scss/components/carousel.scss
+++ b/src/scss/components/carousel.scss
@@ -1,26 +1,41 @@
-// src/scss/styles.scss
-
-.controls {
-  display: flex;
-  justify-content: space-between;
-  width: 100px;
-  margin: 20px auto;
-}
-
 .products-carousel {
   display: flex;
-  overflow: hidden;
-  width: 300px;
+  width: 100%;
   margin: 0 auto;
+  overflow-x: hidden;
+  scroll-snap-type: x mandatory;
 }
 
 .product {
-  flex: 0 0 100%;
-  display: none; /* Escondemos todos los productos al inicio */
+  flex: 0 0 auto;
+  margin-right: 10px;
+  margin-left: 10px;
+  scroll-snap-align: start;
   text-align: center;
+  max-width: 320px;
+  h3 {
+    font-family: "FilsonProRegular";
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    color: $dark;
+    margin-top: -10px;
+    text-align: left;
+  }
+  .content-img {
+    width: 320px;
+    height: auto;
+    img {
+      width: 100%;
+      height: 100%;
+      display: block;
+      border: 0;
+    }
+  }
+  .content-btn{
+    position: relative;
+    top: -60px;
+  }
 }
 
-.product img {
-  max-width: 100%;
-  height: auto;
-}
+
