--- a/src/scss/components/info_banner.scss
+++ b/src/scss/components/info_banner.scss
@@ -4,7 +4,7 @@
   align-items: center;
   background-color: $primary;
   color: $dark;
-  h3 {
+  .title {
     font-family: "Abhaya Libre", serif;
     font-weight: 400;
     font-size: 13px;
