--- a/src/scss/components/carousel.scss
+++ b/src/scss/components/carousel.scss
@@ -13,8 +13,10 @@
   scroll-snap-align: start;
   text-align: center;
   max-width: 320px;
+  font-family: "FilsonProRegular";
+
+
   h3 {
-    font-family: "FilsonProRegular";
     font-weight: 500;
     font-size: 18px;
     line-height: 24px;
@@ -22,9 +24,11 @@
     margin-top: -10px;
     text-align: left;
   }
+
   .content-img {
     width: 320px;
     height: auto;
+
     img {
       width: 100%;
       height: 100%;
@@ -32,10 +36,37 @@
       border: 0;
     }
   }
-  .content-btn{
+
+  .content-btn {
     position: relative;
     top: -60px;
   }
+
+  .stars {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+  }
+  
+  .stars svg {
+    width: 17px;
+    height: 16px;
+  }
+  .star-icon {
+    width: 20px;
+    height: 19px;
+  }
+  .content-rating {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+    .tags{
+      color: $dark-secondary;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 20px;
+      margin-top: 2px;
+    }
+  }
 }
-
-
