--- a/src/scss/components/carousel.scss
+++ b/src/scss/components/carousel.scss
@@ -4,69 +4,83 @@
   margin: 0 auto;
   overflow-x: hidden;
   scroll-snap-type: x mandatory;
-}
 
-.product {
-  flex: 0 0 auto;
-  margin-right: 10px;
-  margin-left: 10px;
-  scroll-snap-align: start;
-  text-align: center;
-  max-width: 320px;
-  font-family: "FilsonProRegular";
+  .product {
+    flex: 0 0 auto;
+    margin-right: 10px;
+    margin-left: 10px;
+    scroll-snap-align: start;
+    text-align: center;
+    max-width: 320px;
+    font-family: "FilsonProRegular";
 
-
-  h3 {
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 24px;
-    color: $dark;
-    margin-top: -10px;
-    text-align: left;
-  }
-
-  .content-img {
-    width: 320px;
-    height: auto;
-
-    img {
-      width: 100%;
-      height: 100%;
-      display: block;
-      border: 0;
+    h3 {
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 24px;
+      color: $dark;
+      margin-top: -10px;
+      text-align: left;
     }
-  }
 
-  .content-btn {
-    position: relative;
-    top: -60px;
-  }
+    .content-img {
+      width: 320px;
+      height: auto;
 
-  .stars {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-  }
-  
-  .stars svg {
-    width: 17px;
-    height: 16px;
-  }
-  .star-icon {
-    width: 20px;
-    height: 19px;
-  }
-  .content-rating {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 10px;
-    .tags{
-      color: $dark-secondary;
-      font-size: 14px;
-      font-weight: 400;
-      line-height: 20px;
-      margin-top: 2px;
+      img {
+        width: 100%;
+        height: 100%;
+        display: block;
+        border: 0;
+      }
+    }
+
+    .content-btn {
+      position: relative;
+      top: -60px;
+    }
+
+    .stars {
+      display: flex;
+      align-items: center;
+      gap: 5px;
+
+      svg {
+        width: 17px;
+        height: 16px;
+      }
+    }
+    
+    .star-icon {
+      width: 20px;
+      height: 19px;
+    }
+    
+    .content-rating {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 10px;
+
+      .price {
+        color: $dark;
+        font-size: 15px;
+        font-weight: 500;
+        text-align: right;
+        line-height: 27px;
+        &.old-price {
+          color: $dark-secondary; 
+          text-decoration: line-through; 
+        }
+      }
+
+      .tags {
+        color: $dark-secondary;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 20px;
+        margin-top: 2px;
+      }
     }
   }
 }
