--- a/src/scss/components/main.scss
+++ b/src/scss/components/main.scss
@@ -1,5 +1,6 @@
 @import "buttons.scss";
-@import "carousel.scss";
-@import "footer.scss";
+@import "hero.scss";
 @import "header.scss";
-@import "info_banner.scss";
+@import "carousel.scss";
+@import "central.scss";
+@import "footer.scss";
