--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -1,7 +1,6 @@
 .btn {
   font-family: "NeogroteskEssRegular";
   font-size: 14px;
-  line-height: 24px;
   text-align: center;
   font-weight: 700;
   background-color: $primary;
@@ -10,14 +9,22 @@
   border: none;
   width: 297px;
   height: 48px;
-  padding: 12px, 32px, 12px, 40px;
-  gap: 8px;
   border-radius: 100px;
   transition: box-shadow 0.3s;
   cursor: pointer;
   &.card {
     background-color: rgba(255, 255, 255, 0.9);
-    color: $primary;
+    color: $tertiary;
+  }
+  &.hero {
+    background-color: $tertiary;
+    color: white;
+    width: 237px;
+  }
+  &.newsletter {
+    background-color: $tertiary;
+    color: white;
+    width: 120px;
   }
   &.control {
     width: 40px;
