--- a/src/scss/base/_breakpoints.scss
+++ b/src/scss/base/_breakpoints.scss
@@ -12,7 +12,7 @@ $breakpoints: (
 }
 
 @mixin respond-to($size) {
-  @media (min-width: breakpoint($size)) {
+  @media (max-width: breakpoint($size)) {
     @content;
   }
 }
