--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,7 +1,5 @@
 .header {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  @include flex(space-evenly, center, row);
   color: $dark;
   height: 200px;
   .decoration {
@@ -28,13 +26,10 @@
     }
   }
   .controls {
-    display: flex;
+    @include flex(space-between, center, row);
     width: 150px;
-    justify-content: space-between;
     .content-control {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      @include flex(center, center, row);
       width: 70px;
       height: 24px;
       border-radius: 100px;
@@ -42,4 +37,21 @@
 
     }
   }
+  @include respond-to(md) {
+    padding: 0 40px;
+    @include flex(flex-start, flex-start, column);
+    height: auto;
+  }
+  @include respond-to(sm) {
+    padding: 0 20px;
+    .title-section {
+      font-size: 28px;
+      line-height: 35px;
+    }
+    .decoration {
+      top: 75px;
+      left: -2px;
+    }
+  }
+
 }
