--- a/src/scss/components/carousel.scss
+++ b/src/scss/components/carousel.scss
@@ -4,7 +4,7 @@
   overflow-x: hidden;
   padding-top: 20px;
   scroll-snap-type: x mandatory;
-
+  height: 580px;
   .product {
     flex: 0 0 auto;
     margin-right: 10px;
