update card mobile

--- a/src/scss/components/carousel.scss
+++ b/src/scss/components/carousel.scss
@@ -1,6 +1,6 @@
 .products-carousel {
-  @include flex(flex-start, center, row);
-  margin: 20px ;
+  @include flex(flex-start, flex-start, row);
+  margin: 20px;
   overflow-x: hidden;
   padding-top: 20px;
   scroll-snap-type: x mandatory;
@@ -13,7 +13,9 @@
     text-align: center;
     max-width: 320px;
     font-family: "FilsonProRegular";
-
+    @include respond-to(sm) {
+      max-width: 247px;
+    }
     h3 {
       font-weight: 500;
       font-size: 18px;
@@ -21,6 +23,10 @@
       color: $dark;
       margin-top: -10px;
       text-align: left;
+      max-width: 95%;
+      @include respond-to(sm) {
+        margin-bottom: -10px;
+      }
     }
 
     .content-img {
@@ -34,9 +40,14 @@
         border: none;
         border-radius: 15px;
       }
+      @include respond-to(sm) {
+        width: 247px;
+        height: 247px;
+      }
     }
 
     .content-btn {
+      @include flex(center, center, row);
       position: relative;
       top: -60px;
     }
@@ -49,13 +60,16 @@
         width: 17px;
         height: 16px;
       }
+      @include respond-to(sm) {
+        margin-bottom: -10px;
+      }
     }
-    
+
     .star-icon {
       width: 20px;
       height: 19px;
     }
-    
+
     .content-rating {
       @include flex(space-between, center, row);
       padding: 0 10px;
@@ -67,11 +81,10 @@
         text-align: right;
         line-height: 27px;
         &.old-price {
-          color: $dark-secondary; 
-          text-decoration: line-through; 
+          color: $dark-secondary;
+          text-decoration: line-through;
         }
       }
-
       .tags {
         color: $dark-secondary;
         font-size: 14px;
@@ -79,11 +92,10 @@
         line-height: 20px;
         margin-top: 2px;
       }
-    }
-  }
-  @include respond-to(sm) {
-    .product, .content-img{
-      max-width: 275px;
+      @include respond-to(sm) {
+        @include flex(flex-start, flex-start, column);
+        padding: 0px;
+      }
     }
   }
 }
