--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -16,7 +16,7 @@
     background-color: rgba(255, 255, 255, 0.9);
     color: $tertiary;
     @include respond-to(sm) {
-      max-width: calc(100% - 20px);
+      max-width: 220px;
     }
   }
   &.hero {
